--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 .container {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -103,4 +114,14 @@
   background: linear-gradient(90deg, #00ffcc, #00aaff);
   height: 100%;
   transition: width 0.3s ease;
+}
+
+.planner-section {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #912828;
 }
